syntax = "proto3";

package com.swisschain.grpc.log;

option java_package = "com.swisschain.matching.engine.database.grpc";
option java_outer_classname = "GrpcMessageLog";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GrpcMessageLogService{
    rpc saveMessage(Message) returns (google.protobuf.Empty) {};
}

message Message {
    int64 sequenceNumber = 1;
    string messageId = 2;
    string requestId = 3;
    google.protobuf.Timestamp timestamp = 4;
    string message = 5;
}